Resolved alignment issue

--- a/src/blocks/price-list/style.scss
+++ b/src/blocks/price-list/style.scss
@@ -212,7 +212,15 @@
 			margin-right: 10px;
 		}
 	}
+	.uagb-rm__image-aligned-middle .uagb-rm__content img {
+		-ms-flex-item-align: center;
+		align-self: center;
+	}
 
+	.uagb-rm__image-aligned-top .uagb-rm__content img {
+		-ms-flex-item-align: flex-start;
+		align-self: flex-start;
+	}
 	/*CSS for image position right with all alignment*/
 	.uagb-rm__image-position-right {
 
